<resources>
    <string name="app_name"></string>
    <string name="FacebookLogin">Continue with Facebook</string>
    <string name="Login">Log In</string>
    <string name="SignUp">Sign up!</string>
    <string name="Shop">Shop</string>
    <string name="Mate">Mate</string>
    <string name="Username">username</string>
    <string name="Password">password</string>
    <string name="email">\@e-mail</string>
    <string name="search">Search</string>
    <string name="ShopCart">Shopping Cart</string>
    <string name="Groups">Groups</string>
    <string name="AddProduct">Add Product</string>
    <string name="Details">Details (optional)</string>
    <string name="title_activity_main_page">Main Page</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="qua_prompt">Quantity *</string>

    <string-array name="qua">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
</resources>
