<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingTop="30dp"
    tools:context="com.example.radustefan.firstapp.SignUp">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/ic_launcher"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Shop"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Mate"
            android:textColor="@android:color/background_light"
            android:textSize="60sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/Username"
            android:textColor="@color/light_grey"
            android:textColorLink="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@string/Password"
            android:textColor="@color/light_grey"
            android:textColorLink="@android:color/holo_blue_dark" />

        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/email"
            android:textColor="@color/light_grey"
            android:textColorLink="@android:color/holo_blue_dark" />

        <Button
            android:id="@+id/Submit"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/my_normal_button"
            android:text="@string/Login"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
