<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:paddingTop="30dp"
    tools:context="com.example.radustefan.firstapp.MainActivity">


    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        app:srcCompat="@mipmap/ic_launcher"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Shop"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Mate"
            android:textColor="@android:color/background_light"
            android:textSize="60sp" />

    </LinearLayout>

    <LinearLayout
        android:paddingTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/MainFacebook"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.2"
            android:background="@drawable/mybutton"
            android:drawableStart="@mipmap/facebook_icon"
            android:fontFamily="sans-serif"
            android:text="@string/FacebookLogin"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/MainLogin"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.2"
            android:background="@drawable/my_normal_button"
            android:hapticFeedbackEnabled="false"
            android:text="@string/Login"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/MainSignUp"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.2"
            android:background="@drawable/my_normal_button"
            android:text="@string/SignUp"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>
